Fixed text alignments!

--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -29,8 +29,6 @@ Most people don't think about their red blood cells unless they have a disease t
 
 Diseases of the red blood cells include many types of anemia. This is a condition in which there are too few red blood cells to carry enough oxygen all over the body.
 
-\newpage
-
 People with anemia may have red blood cells that have an abnormal shape or that look normal, larger than normal, or smaller than normal.
 
 Symptoms of anemia include tiredness, fast heart rate, pale skin, feeling cold, and, in severe cases, heart failure. Children who don't have enough healthy red blood cells grow and develop more slowly than other children. These symptoms show how important red blood cells are to your daily life. \textsuperscript{\cite{Department_2022_rochester}}
@@ -49,7 +47,7 @@ White blood cells are divided into five types:
   \item \textbf{Monocytes:} Defend against infection by cleaning up damaged cells.
 \end{itemize}
 
-\vspace{0.1in}
+\newpage
 
 \begin{figure}[H]
 \centering
@@ -74,7 +72,7 @@ Platelets help prevent blood loss at sites of vascular injury. To do this, they 
 \section{Complete blood count}
 \subsection{Definition}
 
-A complete blood count (CBC) is a set of tests that gives information about the cells in a person's blood. A scientist or lab technician performs the requested testing and provides the requesting medical professional with the results of the CBC. In the past, counting the cells in a patient's blood was performed manually, by viewing a slide prepared with a sample of the patient's blood under a microscope. Today, this process is generally automated by use of an automated analyzer, with only approximately 10-20\% of samples now being examined manually. Abnormally high or low counts may indicate the presence of a disease.\\
+A complete blood count (CBC) is a set of tests that gives information about the cells in a person's blood. A scientist or lab technician performs the requested testing and provides the requesting medical professional with the results of the CBC. In the past, counting the cells in a patient's blood was performed manually, by viewing a slide prepared with a sample of the patient's blood under a microscope. Today, this process is generally automated by use of an automated analyzer, with only approximately 10-20\% of samples now being examined manually. Abnormally high or low counts may indicate the presence of a disease.
 
 \subsection{Purpose of a complete blood count}
 
