Fixed bibtex files and added another article

--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -34,7 +34,7 @@
 
 % Replace table caption name
 \usepackage{caption}
-\captionsetup[table]{name=Tableau}
+% \captionsetup[table]{name=Table}
 
 % For toc, lot and lof
 \usepackage[titles]{tocloft}
@@ -112,7 +112,7 @@
 \definecolor{MYCOL}{HTML}{00318A}
 
 % List of Figures settings:
-\renewcommand{\listfigurename}{Liste Des Figures}
+\renewcommand{\listfigurename}{Liste Of Figures}
 \renewcommand{\cftloftitlefont}{\vspace*{-0.6in}\hfill\color{Black}\fontsize{35}{43}\bfseries}
 \renewcommand{\cftafterloftitle}{\hfill}
 \setlength{\cftfigindent}{0pt} % left aligned Fig entries
@@ -121,11 +121,11 @@
 \addtolength{\cftfignumwidth}{2.5em} % extra space for \cftpresnum
 
 % List of Tables settings:
-\renewcommand{\listtablename}{Liste Des Tableaux}
+\renewcommand{\listtablename}{Liste Of Tables}
 \renewcommand{\cftlottitlefont}{\vspace*{-0.6in}\hfill\color{Black}\fontsize{35}{43}\bfseries}
 \renewcommand{\cftafterlottitle}{\hfill}
 \setlength{\cfttabindent}{0pt} % left aligned Tab entries
-\renewcommand{\cfttabpresnum}{Tableau } % put before the number
+\renewcommand{\cfttabpresnum}{Table } % put before the number
 \renewcommand{\cfttabaftersnum}{:} % put before the number
 \addtolength{\cfttabnumwidth}{2.5em} % extra space for \cftpresnum
 
