--- a/PFE/latex/tables/table1.tex
+++ b/PFE/latex/tables/table1.tex
@@ -79,6 +79,6 @@
   ALL-IDB1 \\ \hline
 \end{tabular}%
 }
-\caption{}
-\label{Table that represents a comparative study of previous methods}
+\caption{Table that represents a comparative study of previous methods}
+\label{Table 1}
 \end{table}
