Fixed file structure!

--- a/PFE/latex/chap3.tex
+++ b/PFE/latex/chap3.tex
@@ -191,13 +191,14 @@ consists of one hundred 300×300 color images, which were collected from the Cel
 
 
 \subsection{Annotation}
-The class labels of each image in Dataset 1 and Dataset 2 are stored in csv files . The labels (1- 5) represent neutrophil, lymphocyte, monocyte, eosinophil and basophil, respectively.
+The class labels of each image in Dataset 1 and Dataset 2 are stored in csv files. The labels (1- 5) represent neutrophil, lymphocyte, monocyte, eosinophil and basophil, respectively.
 
 
 \subsection{A large dataset of white blood cells containing cell locations and types, along with segmented nuclei and cytoplasm}
 
 
 \subsection{BCCD}
+BCCD Dataset is a small-scale dataset for blood cells detection. The original data and annotations are from cosmicad  and akshaylamba
 
 
 \newpage
