--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -456,16 +456,36 @@ This thesis is presented in four chapters:\\
 
 \input{chap3.tex}
 
+\newpage
+
 \vspace*{\fill}
 \begin{center}
     {\color{Black} \rule{\linewidth}{1.2mm} }\\
 \vspace{0.25in}
-    {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter IV : Implementation}}}}}
+    {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter IV : }}}}}
 \vspace{0.35in}\\
     {\color{Black} \rule{\linewidth}{1.2mm} }
 \end{center}
 \vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapter IV : Implementation}}
+\addcontentsline{toc}{chapter}{\color{Black}{Chapter IV : }}
+\setcounter{section}{0}
+
+\newpage
+
+\input{chap4.tex}
+
+\newpage
+
+\vspace*{\fill}
+\begin{center}
+    {\color{Black} \rule{\linewidth}{1.2mm} }\\
+\vspace{0.25in}
+    {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter V : Implementation}}}}}
+\vspace{0.35in}\\
+    {\color{Black} \rule{\linewidth}{1.2mm} }
+\end{center}
+\vspace*{\fill}
+\addcontentsline{toc}{chapter}{\color{Black}{Chapter V : Implementation}}
 \setcounter{section}{0}
 
 \newpage
