--- a/PFE/latex/tables/table1.tex
+++ b/PFE/latex/tables/table1.tex
@@ -1,16 +1,9 @@
 \begin{table}[H]
 \centering
 \resizebox{\textwidth}{!}{%
-\begin{tabular}{|
->{\columncolor[HTML]{FFFFFF}}l |
->{\columncolor[HTML]{FFFFFF}}c 
->{\columncolor[HTML]{FFFFFF}}c |
->{\columncolor[HTML]{FFFFFF}}c |
->{\columncolor[HTML]{FFFFFF}}c 
->{\columncolor[HTML]{FFFFFF}}c |
->{\columncolor[HTML]{FFFFFF}}c |
->{\columncolor[HTML]{FFFFFF}}c |}
+\begin{tabular}{|l|cc|c|cc|c|c|}
 \hline
+\rowcolor[HTML]{FFFFFF} 
 \multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}\textbf{Reference}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}c@{}}Segmentation\\ Approach\end{tabular}}} &
   \textbf{\begin{tabular}[c]{@{}c@{}}Counting\\ Approach\end{tabular}} &
@@ -19,7 +12,8 @@
   \textbf{\begin{tabular}[c]{@{}c@{}}Counting\\ Accuracy\end{tabular}} &
   \textbf{\begin{tabular}[c]{@{}c@{}}Database\\ Size\end{tabular}} &
   \textbf{\begin{tabular}[c]{@{}c@{}}Database\\ Name\end{tabular}} \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Kimbahune\\ et al\end{tabular}} &
+\rowcolor[HTML]{FFFFFF} 
+  \textbf{\begin{tabular}[c]{@{}l@{}}Kimbahune\\ et al. \textsuperscript{\cite{kimbahune2011blood}} \end{tabular}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}PCNN} &
   Square tracing method &
   N/A &
@@ -27,27 +21,31 @@
   N/A &
   N/A &
   N/A \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Guiliang, FENG\\ et al.\end{tabular}} &
+\rowcolor[HTML]{FFFFFF} 
+  \textbf{\begin{tabular}[c]{@{}l@{}}Guiliang, FENG\\ et al. \textsuperscript{\cite{guiliang2016microscopic}} \end{tabular}} &
   \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}Discrete Cosine Transform (DCT)} &
   N/A &
   \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}90\%} &
   N/A &
   N/A \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Bhavnani\\ et al\end{tabular}} &
+\rowcolor[HTML]{FFFFFF} 
+  \textbf{\begin{tabular}[c]{@{}l@{}}Bhavnani\\ et al \textsuperscript{\cite{bhavnani2016segmentation}} \end{tabular}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}OTsu's thresholding \\ and morphological\\ operations\end{tabular}} &
   \begin{tabular}[c]{@{}c@{}}1-Circular Hough\\ Transfer\\ 2-Watershed Algorithm\end{tabular} &
   \begin{tabular}[c]{@{}c@{}}2594x1944\\ 1712x1368\end{tabular} &
   \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}1- 92.67\%\\ 2- 91.07\%\end{tabular}} &
   20 / 108 &
   ALLIDB \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Carlos\\ et al\end{tabular}} &
+\rowcolor[HTML]{FFFFFF} 
+  \textbf{\begin{tabular}[c]{@{}l@{}}Carlos\\ et al. \textsuperscript{\cite{DBLP:journals/corr/abs-1802-10548}} \end{tabular}} &
   \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}FPN combined with VGG style\\ neural network\end{tabular}} &
   256x196 &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}95\%} &
    &
   80 / 20 &
   BBBC005 \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Tran, Thanh \\ and\\ Minh et al\end{tabular}} &
+\rowcolor[HTML]{FFFFFF} 
+  \textbf{\begin{tabular}[c]{@{}l@{}}Tran, Thanh \\ and\\ Minh et al. \textsuperscript{\cite{tran2019blood}} \end{tabular}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}SegNet with weights\\ from a pre-trained\\ VGG-16\end{tabular}} &
   \begin{tabular}[c]{@{}c@{}}Distance Transform\\ and connected\\ component labeling\\ algorithm\end{tabular} &
   \begin{tabular}[c]{@{}c@{}}360x480x3\\ (RGB)\end{tabular} &
@@ -55,7 +53,8 @@
   97.29\% &
   380 / 32 &
   ALL-IDB1 \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}K. Sudha and\\ P. Geetha\end{tabular}} &
+\rowcolor[HTML]{FFFFFF} 
+  \textbf{\begin{tabular}[c]{@{}l@{}}K. Sudha and\\ P. Geetha \textsuperscript{\cite{SUDHA2020639}} \end{tabular}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Edge strength-based\\ Grabcut\end{tabular}} &
   \begin{tabular}[c]{@{}c@{}}Gradient Circular\\ Hough Transform\end{tabular} &
   256x256 &
@@ -63,22 +62,33 @@
   97.3\% &
    &
   ALL-IDB \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Yan Kong\\ et al\end{tabular}} &
+\rowcolor[HTML]{FFFFFF} 
+\textbf{\begin{tabular}[c]{@{}l@{}}Yan Kong\\ et al. \textsuperscript{\cite{Kong:20}} \end{tabular}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Two parallel\\ modified U-Nets\end{tabular}} &
   \begin{tabular}[c]{@{}c@{}}Seed Guided Water-\\ Mesh Algorithm\end{tabular} &
   224x224 &
   \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}96\%} &
   3310 / 1050 &
   Self Annotated \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Overton, Toyah\\ and\\ Tucker, Allan\end{tabular}} &
+\textbf{\begin{tabular}[c]{@{}l@{}}Shahzad \\ et al. \textsuperscript{\cite{shahzad2020robust}} \end{tabular}} &
+  \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Custom encoder-decoder\\ framework with VGG-16\end{tabular}} &
+  N/A &
+  \begin{tabular}[c]{@{}c@{}}2594x1944\\ 1712x1368\end{tabular} &
+  \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}97.45\%\\ 93.34\%\end{tabular}} &
+  N/A &
+  108 &
+  ALL-IDB1 \\ \hline
+\rowcolor[HTML]{FFFFFF} 
+\textbf{\begin{tabular}[c]{@{}l@{}}Overton, Toyah\\ and\\ Tucker, Allan \textsuperscript{\cite{10.1007/978-3-030-44584-3_31}} \end{tabular}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}DO-U-Net} &
   \begin{tabular}[c]{@{}c@{}}Marching Squares\\ Algorithm\end{tabular} &
   188x188 &
-  \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}98.31\%} &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}98.31\%} &
+   &
   10 / 5 &
   ALL-IDB1 \\ \hline
 \end{tabular}%
 }
 \caption{Table that represents a comparative study of previous methods}
-\label{Table 1}
+\label{Table that represents a comparative study of previous methods}
 \end{table}
