--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -192,11 +192,11 @@
 {0em}
 {}[]
 
-\titleformat{\subsubsection}
-{\bfseries\large}
-{\hspace{0.40in}}
-{0em}
-{}[]
+%\titleformat{\subsubsection}
+%{\bfseries\large}
+%{\hspace{0.40in}}
+%{0em}
+%{}[]
 
 \newenvironment{myindentpar}[1]%
   {\begin{list}{}%
