--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -14,7 +14,12 @@ abstract="Many image analysis tasks involve the automatic segmentation and count
 isbn="978-3-030-44584-3"
 }
 
-@article{DBLP:journals/corr/abs-1802-10548,
+@article{2022_tecom-cn,
+	author	={tecom-cn},
+	title	={JiangxiTecom Biochemistry Equipment Co., Ltd., Hematology Analyzers Biochemistry Analyzers Reagents},
+	year	={2022},
+	url	={https://en.tecom-cn.com/}
+	}@article{DBLP:journals/corr/abs-1802-10548,
   author    = {Carlos X. Hern{\'{a}}ndez and
                Mohammad M. Sultan and
                Vijay S. Pande},
@@ -67,7 +72,12 @@ url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
   publisher={Modern Education and Computer Science Press}
 }
 
-@article{Clicking_On_2022_mayoclinic,
+@article{2022_cellavision,
+	author	={Highlighting Interesting Articles},
+	title	={CellaVision News Blast – CellaVision AB},
+	year	={2022},
+	url	={https://blog.cellavision.com/}
+	}@article{Clicking_On_2022_mayoclinic,
 author = {Clicking On},
 title	 = {Complete blood count (CBC) - Mayo Clinic},
 year	 = {2022},
@@ -218,6 +228,16 @@ url = {https://www.sciencedirect.com/science/article/pii/S0208521620300267},
 author = {K. Sudha and P. Geetha},
 keywords = {Leukocytes, Microscopic blood images, Edge strength, Grabcut technique, Gradient circular hough transform},
 abstract = {Leukocytes count in the blood smear images plays an important role in identifying the overall health of the patient. The major steps involved in leukocytes counting system are segmentation and counting. However, the counting accuracy is greatly affected due to the morphological diversity of cells, the presence of staining artifacts and the overlapped cells. Therefore, this paper introduces a new framework to segment and counting of leukocytes. To segment leukocytes, an edge strength-based Grabcut method has been proposed. Later, the leukocyte region including the overlapped cells was counted using the novel gradient circular hough transform (GCHT) method. The research work was performed on ALL-IDB and Cellavision datasets. The proposed segmentation method has yielded high precision, recall and f-measure compared to the state-of-the-art methods. Additionally, comparison analysis was performed between the region count obtained using the existing and the GCHT method. The overall experimental results of the work showed that the proposed framework produced more accuracy in counting the leukocytes.}
+}
+
+@inproceedings{sarrafzadeh2014selection,
+  title={Selection of the best features for leukocytes classification in blood smear microscopic images},
+  author={Sarrafzadeh, Omid and Rabbani, Hossein and Talebi, Ardeshir and Banaem, Hossein Usefi},
+  booktitle={Medical Imaging 2014: Digital Pathology},
+  volume={9041},
+  pages={159--166},
+  year={2014},
+  organization={SPIE}
 }
 
 @article{shahzad2020robust,
