--- a/PFE/latex/tables/table1.tex
+++ b/PFE/latex/tables/table1.tex
@@ -40,8 +40,7 @@
   \textbf{\begin{tabular}[c]{@{}l@{}}Carlos\\ et al. \textsuperscript{\cite{DBLP:journals/corr/abs-1802-10548}} \end{tabular}} &
   \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}FPN combined with VGG style\\ neural network\end{tabular}} &
   256x196 &
-  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}95\%} &
-   &
+  \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}95\%} &
   80 / 20 &
   BBBC005 \\ \hline
 \rowcolor[HTML]{FFFFFF} 
@@ -60,7 +59,7 @@
   256x256 &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}99.32\%} &
   97.3\% &
-   &
+  1210 &
   ALL-IDB \\ \hline
 \rowcolor[HTML]{FFFFFF} 
 \textbf{\begin{tabular}[c]{@{}l@{}}Yan Kong\\ et al. \textsuperscript{\cite{Kong:20}} \end{tabular}} &
@@ -83,10 +82,17 @@
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}DO-U-Net} &
   \begin{tabular}[c]{@{}c@{}}Marching Squares\\ Algorithm\end{tabular} &
   188x188 &
-  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}98.31\%} &
-   &
+  \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}98.31\%} &
   10 / 5 &
   ALL-IDB1 \\ \hline
+\textbf{\begin{tabular}[c]{@{}l@{}}Li, Dongming\\ et al. \textsuperscript{\cite{li2021robust}} \end{tabular}} &
+  \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Neural Ordinary \\ Differential \\ Equations (NODEs) \\ with U-Net networks\end{tabular}} &
+  N/A &
+  256x256 &
+  \multicolumn{1}{c|}{95.3\%} &
+  N/A &
+  800 &
+  MISP \textsuperscript{\cite{sarrafzadeh2014selection}}\\ \hline
 \end{tabular}%
 }
 \caption{Table that represents a comparative study of previous methods}
