Added dataset references!

--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -215,6 +215,15 @@ abstract = {Yeast fluorescence microscopic images are widely used to observe the
   year={2014}
 }
 
+@data{pm77-2n23-20,
+	doi = {10.21227/pm77-2n23},
+	url = {https://dx.doi.org/10.21227/pm77-2n23},
+	author = {Scotti, Fabio and Labati, Ruggero Donida and Piuri, Prof. Vincenzo },
+	publisher = {IEEE Dataport},
+	title = {ALL-IDB (Acute Lymphoblastic leukaemia-International Database)},
+	year = {2020}
+} 
+
 @article{SUDHA2020639,
 title = {A novel approach for segmentation and counting of overlapped leukocytes in microscopic blood images},
 journal = {Biocybernetics and Biomedical Engineering},
