--- a/PFE/latex/tables/table1.tex
+++ b/PFE/latex/tables/table1.tex
@@ -35,7 +35,7 @@
   \begin{tabular}[c]{@{}c@{}}2594x1944\\ 1712x1368\end{tabular} &
   \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}1- 92.67\%\\ 2- 91.07\%\end{tabular}} &
   20 / 108 &
-  ALLIDB \\ \hline
+  ALLIDB \textsuperscript{\cite{pm77-2n23-20}}\\ \hline
 \rowcolor[HTML]{FFFFFF} 
   \textbf{\begin{tabular}[c]{@{}l@{}}Carlos\\ et al. \textsuperscript{\cite{DBLP:journals/corr/abs-1802-10548}} \end{tabular}} &
   \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}FPN combined with VGG style\\ neural network\end{tabular}} &
@@ -51,7 +51,7 @@
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}98.5\%} &
   97.29\% &
   380 / 32 &
-  ALL-IDB1 \\ \hline
+  ALL-IDB1 \textsuperscript{\cite{pm77-2n23-20}}\\ \hline
 \rowcolor[HTML]{FFFFFF} 
   \textbf{\begin{tabular}[c]{@{}l@{}}K. Sudha and\\ P. Geetha \textsuperscript{\cite{SUDHA2020639}} \end{tabular}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Edge strength-based\\ Grabcut\end{tabular}} &
@@ -60,7 +60,7 @@
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}99.32\%} &
   97.3\% &
   1210 &
-  ALL-IDB \\ \hline
+  ALL-IDB \textsuperscript{\cite{pm77-2n23-20}}\\ \hline
 \rowcolor[HTML]{FFFFFF} 
 \textbf{\begin{tabular}[c]{@{}l@{}}Yan Kong\\ et al. \textsuperscript{\cite{Kong:20}} \end{tabular}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Two parallel\\ modified U-Nets\end{tabular}} &
@@ -76,7 +76,7 @@
   \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}97.45\%\\ 93.34\%\end{tabular}} &
   N/A &
   108 &
-  ALL-IDB1 \\ \hline
+  ALL-IDB1 \textsuperscript{\cite{pm77-2n23-20}}\\ \hline
 \rowcolor[HTML]{FFFFFF} 
 \textbf{\begin{tabular}[c]{@{}l@{}}Overton, Toyah\\ and\\ Tucker, Allan \textsuperscript{\cite{10.1007/978-3-030-44584-3_31}} \end{tabular}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}DO-U-Net} &
@@ -84,7 +84,7 @@
   188x188 &
   \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}98.31\%} &
   10 / 5 &
-  ALL-IDB1 \\ \hline
+  ALL-IDB1 \textsuperscript{\cite{pm77-2n23-20}}\\ \hline
 \textbf{\begin{tabular}[c]{@{}l@{}}Li, Dongming\\ et al. \textsuperscript{\cite{li2021robust}} \end{tabular}} &
   \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Neural Ordinary \\ Differential \\ Equations (NODEs) \\ with U-Net networks\end{tabular}} &
   N/A &
