--- a/PFE/latex/tables/table1.tex
+++ b/PFE/latex/tables/table1.tex
@@ -10,8 +10,8 @@
   \textbf{\begin{tabular}[c]{@{}c@{}}Image\\ Size\end{tabular}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}c@{}}Segmentation\\ Accuracy\end{tabular}}} &
   \textbf{\begin{tabular}[c]{@{}c@{}}Counting\\ Accuracy\end{tabular}} &
-  \textbf{\begin{tabular}[c]{@{}c@{}}Database\\ Size\end{tabular}} &
-  \textbf{\begin{tabular}[c]{@{}c@{}}Database\\ Name\end{tabular}} \\ \hline
+  \textbf{\begin{tabular}[c]{@{}c@{}}Dataset\\ Size\end{tabular}} &
+  \textbf{\begin{tabular}[c]{@{}c@{}}Dataset\\ Name\end{tabular}} \\ \hline
 \rowcolor[HTML]{FFFFFF} 
   \textbf{\begin{tabular}[c]{@{}l@{}}Kimbahune\\ et al. \textsuperscript{\cite{kimbahune2011blood}} \end{tabular}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}PCNN} &
