--- a/PFE/latex/tables/table1.tex
+++ b/PFE/latex/tables/table1.tex
@@ -31,7 +31,7 @@
 \rowcolor[HTML]{FFFFFF} 
   \textbf{\begin{tabular}[c]{@{}l@{}}Bhavnani\\ et al \textsuperscript{\cite{bhavnani2016segmentation}} \end{tabular}} &
   \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}OTsu's thresholding \\ and morphological\\ operations\end{tabular}} &
-  \begin{tabular}[c]{@{}c@{}}1-Circular Hough\\ Transfer\\ 2-Watershed Algorithm\end{tabular} &
+  \begin{tabular}[c]{@{}c@{}}1-Circular Hough\\ Transform\\ 2-Watershed Algorithm\end{tabular} &
   \begin{tabular}[c]{@{}c@{}}2594x1944\\ 1712x1368\end{tabular} &
   \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}1- 92.67\%\\ 2- 91.07\%\end{tabular}} &
   20 / 108 &
